<resources>
    <string name="app_name">BookishInventory</string>
    <string name="product_name">Product Name:</string>
    <string name="name_hint">Howl\'s Moving Castle</string>
    <string name="price">Price (Nearest Dollar): \$</string>
    <string name="price_hint">10</string>
    <string name="quantity">Quantity:</string>
    <string name="quantity_hint">1</string>
    <string name="supplier_name">Supplier Name:</string>
    <string name="supplier_hint">Bill\'s Library</string>
    <string name="supplier_phone">Supplier Phone Number:</string>
    <string name="phone_hint">1-800-555-2665</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="action_save">Save</string>
    <string name="empty_message">Your store has no books. Let\'s add some!</string>
    <string name="insert_title">Add a Book</string>
    <string name="edit_title">Edit Book Entry</string>
    <string name="app_title">Bookish Inventory</string>
    <string name="action_delete_this_entry">Delete Entry</string>
    <string name="book_deleted_toast">Book Deleted.</string>
    <string name="delete_error">There was a problem deleting this book.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this book?</string>
    <string name="unsaved_changes_dialog_msg">You have unsaved changes.</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Continue Editing</string>
    <string name="sale_button">SALE</string>
    <string name="sold_out">You already sold all of this book!</string>
    <string name="sale_error">Error in selling this book</string>
    <string name="complete_all_fields">Please fill in all fields</string>
    <string name="sample_title">Howl\'s Moving Castle</string>
    <string name="sample_supplier">Billy Bob Joel</string>
    <string name="sample_phoone">1-800-867-5309</string>
    <string name="dummy_added">New Book added.</string>
    <string name="dummy_not_added">No new rows added.</string>
    <string name="sold">Congrats, you sold a book!</string>
    <string name="order_button">order now</string>
    <string name="update_toast">Product Updated</string>
    <string name="update_fail_toast">Update failed</string>
    <string name="insert_toast">New Book added.</string>
    <string name="insert_failed_toast">No new books added.</string>
</resources>
